--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,6 @@
-fitz==0.0.1.dev2
-Flask==2.2.2
-Flask-RESTful==0.3.9
-Flask-UUID==0.2
-Flask-WTF==1.1.1
-frontend==0.0.3
-Jinja2==3.1.2
-password-generator==0.1.0
-passwordgenerator==1.5.1
-simplejson==3.18.4
-SQLAlchemy==2.0.11
-sqlparse==0.4.3
-Werkzeug==2.2.2
-WTForms==3.0.1
+Flask~=2.3.2
+fitz~=0.0.1.dev2
+requests==2.30.0
+SQLAlchemy~=2.0.13
+WTForms~=3.0.1
+Flask-WTF~=1.1.1
